[package]
name = "load_balancing"
version = "0.1.0"
edition = "2021"
authors = ["petechen <15736755067@163.com>"]
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/load_balancing/blob/main/README.md"
repository = "https://github.com/ptechen/load_balancing.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "load balancing"

[dependencies]
once_cell = "1.13.0"
serde = {version = "1.0.142", features = ["derive"]}
tokio = "1"
